# OOAD-with-AI

./: .gitignore  README.md  RVC_SW_Controller_SRS.md  RVC_SW_Controller_UseCases.md  package.json
.github/workflows/: cpp-ci.yml
2nd ooad/: README.md
2nd ooad/01_requirements/: RVC_SW_Controller_SRS.md
2nd ooad/02_use_cases/: RVC_SW_Controller_UseCases.md
2nd ooad/03_diagrams/: render-diagrams.ps1
2nd ooad/03_diagrams/class/: RVC_Class_Diagram.md  RVC_class.puml
2nd ooad/03_diagrams/domain/: RVC_Domain_Diagram.md  RVC_domain.puml
2nd ooad/03_diagrams/sd/: RVC_SD_Index.md  UC-01_SD.md  UC-02_SD.md  UC-03_SD.md  UC-04_SD.md  UC-05_SD.md  UC-06_SD.md  UC-07_SD.md  UC-08_SD.md  UC-09_SD.md  UC01_sequence.cmapx  UC01_sequence.puml  UC02_sequence.cmapx  UC02_sequence.puml  UC03_sequence.cmapx  UC03_sequence.puml  UC04_sequence.cmapx  UC04_sequence.puml  (+10 more)
2nd ooad/04_code/: README.md  RVC_Code.md
2nd ooad/05_unit_tests/: AutomaticCleaningSessionTest.cpp  NavigationAndEscapeCoordinatorTest.cpp  RVC_Unit_Tests.md  RvcSoftwareControllerTest.cpp  SurfaceCleaningControllerTest.cpp  coverage.html  run-tests.bat  run-tests.ps1
2nd ooad/06_simulator/: RVC_Simulator.md  run-simulator.bat  run-simulator.ps1  rvc_simulator.cpp
cpp/: CMakeLists.txt  README.md  build-demo.bat  build-demo.ps1  run-coverage.bat  run-coverage.ps1  run-simulator.bat  run-simulator.ps1  run-tests.bat  run-tests.ps1
cpp/examples/: demo.cpp
cpp/include/rvc/: AutomaticCleaningSession.hpp  NavigationAndEscapeCoordinator.hpp  ObstaclePerceptionContext.hpp  Ports.hpp  RvcSoftwareController.hpp  SurfaceCleaningController.hpp  Types.hpp
cpp/simul/: ConsoleRunner.cpp  ConsoleRunner.hpp  SimulatorCore.cpp  SimulatorCore.hpp  Win32Gui.cpp  Win32Gui.hpp  rvc_simulator.cpp
cpp/simulator/: rvc_simulator.cpp
cpp/src/: AutomaticCleaningSession.cpp  NavigationAndEscapeCoordinator.cpp  ObstaclePerceptionContext.cpp  RvcSoftwareController.cpp  SurfaceCleaningController.cpp
cpp/tests/: AutomaticCleaningSessionTest.cpp  NavigationAndEscapeCoordinatorTest.cpp  ObstaclePerceptionContextTest.cpp  RvcSoftwareControllerTest.cpp  SimulatorCoreTest.cpp  SurfaceCleaningControllerTest.cpp  TestDoubles.hpp
diagrams/: RVC_Domain_Diagram.md  RVC_SSD_Index.md  render-diagrams.ps1
diagrams/class/: RVC_Class_Diagram.md  RVC_class.puml
diagrams/plantuml/: RVC_domain.puml  UC01_sequence.cmapx  UC02_system_sequence.cmapx  UC02_system_sequence.puml  UC03_system_sequence.cmapx  UC03_system_sequence.puml  UC04_system_sequence.cmapx  UC04_system_sequence.puml  UC05_system_sequence.cmapx  UC05_system_sequence.puml  UC07_system_sequence.puml  UC08_system_sequence.cmapx  UC08_system_sequence.puml  UC09_system_sequence.cmapx  UC09_system_sequence.puml
diagrams/sd/: RVC_SD_Index.md  UC-01_SD.md  UC-02_SD.md  UC-03_SD.md  UC-04_SD.md  UC-05_SD.md  UC-06_SD.md  UC-07_SD.md  UC-08_SD.md  UC-09_SD.md  UC02_sequence.cmapx  UC02_sequence.puml  UC03_sequence.cmapx  UC03_sequence.puml  UC04_sequence.cmapx  UC04_sequence.puml  UC05_sequence.cmapx  UC05_sequence.puml  UC06_sequence.puml  UC07_sequence.cmapx  UC07_sequence.puml  UC08_sequence.cmapx  UC08_sequence.puml  UC09_sequence.cmapx  UC09_sequence.puml
diagrams/ssd/: UC-01_SSD.md  UC-02_SSD.md  UC-03_SSD.md  UC-04_SSD.md  UC-05_SSD.md  UC-06_SSD.md  UC-07_SSD.md  UC-08_SSD.md  UC-09_SSD.md
(+35 files in other folders)
